--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: ##FFFFFF;
+    background-color: #FFFFFF;
 }
 
 .header {
@@ -33,7 +33,41 @@ body {
     line-height: 1.2;
 }
 
+.header, .submit-order-page {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    background: linear-gradient(to right, #b2e4db, #8ad5db); /* Apply the gradient */
+    width: 100%;
+    height: 120px; /* Change this value to set your desired header height */
+    box-sizing: border-box;
+    border-radius: 10px; /* Adjust the value for more or less curve */
+}
 
+.header-logo {
+    height: 150px; /* Sets the height */
+    width: auto;   /* Maintains aspect ratio */
+    margin-right: 1px;
+    margin-left: -5px; /* Moves the logo to the left */
+}
+
+
+.header-title {
+    flex-grow: 1;
+    font-size: 26px;
+    font-weight: bold;
+    font-family: 'Sriracha', cursive; /* Add the Luckiest Guy font */
+    letter-spacing: 1px; 
+    line-height: 1.2;
+}
+
+.submit-order-container, .right-box {
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    text-align: center;
+}
 
 
 .top-buttons {
